--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Utery</title>
+    <style>
+        h1{
+            color:blueviolet;
+        }
+    </style>
 </head>
 <body>
    <h1>Od Marka</h1> 
