--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 <body>
    <h1>Od Marka</h1> 
+   <h2>od marka 2</h2>
    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa mollitia voluptas magni fuga accusantium velit, rem adipisci quas quae odio voluptatem beatae officia aliquid praesentium, minus cupiditate, nobis distinctio obcaecati!</p>
 </body>
 </html>
