--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
    <h2>od marka 2</h2>
    
    <h5>yxrgydfgdr</h5>
+   <button>42</button>
+   <p>nebo</p>
+   <button>illuminati</button>
    
    
    
