--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
    
    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa mollitia voluptas magni fuga accusantium velit, rem adipisci quas quae odio voluptatem beatae officia aliquid praesentium, minus cupiditate, nobis distinctio obcaecati!</p>
    <h2>Ahoj, od Dana.</h2>
+   <p>Brr Brr Patapim</p>
 </body>
 </html>
 
