--- a/index.html
+++ b/index.html
@@ -3,28 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Utery</title>
+    <title>DokumentNevim</title>
     <style>
         h1{
-            color:blueviolet;
+            color:beige
         }
     </style>
 </head>
 <body>
-   <h1>Od Marka</h1> 
-   <h2>od marka 2</h2>
-   
-   <h5>yxrgydfgdr</h5>
-   <button>42</button>
-   <p>nebo</p>
-   <button>illuminati</button>
-   
-   
-   
-   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa mollitia voluptas magni fuga accusantium velit, rem adipisci quas quae odio voluptatem beatae officia aliquid praesentium, minus cupiditate, nobis distinctio obcaecati!</p>
-   <h2>Ahoj, od Dana.</h2>
-   <p>Brr Brr Patapim</p>
+    <h1><b>Ahoj Svět</b></h1>
+    <h2>Napsal Adam</h2>
+    <button>Button</button>
+    <button>Stiskni me</button>
+    <h5>Test Sentence</h5>
+    
+    <p>Das ist perfekt. Ich bin sehr gut in Prag. Haha</p>
 </body>
 </html>
+
+
 
 
